pluma_analyzer/tests/snapshots/analyze_tests__enum_type_constructor_invalid_args.snap
---
source: pluma_analyzer/tests/analyze_tests.rs
expression: "intrinsic_type Int\nintrinsic_type String\n\nenum Either\n | Left(Int)\n | Right(String)\n\nlet a = Left(\"hi\")\nlet b = Right(47)"
---

=== Source ===
intrinsic_type Int
intrinsic_type String

enum Either
 | Left(Int)
 | Right(String)

let a = Left("hi")
let b = Right(47)

=== Diagnostics ===
[
    Diagnostic {
        kind: Error,
        message: "Parameter type mismatch. Expected type Int, but found type String.",
        pos: Some(
            (
                97,
                103,
            ),
        ),
        module_name: None,
        module_path: None,
    },
    Diagnostic {
        kind: Error,
        message: "Parameter type mismatch. Expected type String, but found type Int.",
        pos: Some(
            (
                117,
                121,
            ),
        ),
        module_name: None,
        module_path: None,
    },
]

