pluma_analyzer/tests/snapshots/analyze_tests__intrinsic_def_binary_op_invalid.snap
---
source: pluma_analyzer/tests/analyze_tests.rs
expression: "intrinsic_type Int\nintrinsic_def Int + Int -> Int\n\nlet result = 3 + \"yikes\""
---

=== Source ===
intrinsic_type Int
intrinsic_def Int + Int -> Int

let result = 3 + "yikes"

=== Diagnostics ===
[
    Diagnostic {
        kind: Error,
        message: "Parameter type mismatch. Expected type Int, but found type String.",
        pos: Some(
            (
                69,
                74,
            ),
        ),
        module_name: None,
        module_path: None,
    },
]

