pluma_analyzer/tests/snapshots/analyze_tests__let_labeled_tuple_unknown_field.snap
---
source: pluma_analyzer/tests/analyze_tests.rs
expression: "intrinsic_type Int\nintrinsic_type String\n\nlet tup = (name: \"Reid\", age: 26)\nlet (age: age2, wat: name2) = tup"
---

=== Source ===
intrinsic_type Int
intrinsic_type String

let tup = (name: "Reid", age: 26)
let (age: age2, wat: name2) = tup

=== Diagnostics ===
[
    Diagnostic {
        kind: Error,
        message: "Cannot destructure unknown field \'wat\' in pattern. Value has type (name: String, age: Int).",
        pos: Some(
            (
                92,
                95,
            ),
        ),
        module_name: None,
        module_path: None,
    },
]

