pluma_analyzer/tests/snapshots/analyze_tests__undefined_return_type_in_signature.snap
---
source: pluma_analyzer/tests/analyze_tests.rs
expression: "def takesSomething () -> Wat {\n  |arg| ()\n}"
---

=== Source ===
def takesSomething () -> Wat {
  |arg| ()
}

=== Diagnostics ===
[
    Diagnostic {
        kind: Error,
        message: "Type Wat is not defined.",
        pos: Some(
            (
                25,
                28,
            ),
        ),
        module_name: None,
        module_path: None,
    },
    Diagnostic {
        kind: Error,
        message: "Return type mismatch. Expected type Wat, but found type ().",
        pos: Some(
            (
                39,
                41,
            ),
        ),
        module_name: None,
        module_path: None,
    },
    Diagnostic {
        kind: Warning,
        message: "Name \'arg\' is never used.",
        pos: Some(
            (
                34,
                37,
            ),
        ),
        module_name: None,
        module_path: None,
    },
]

